# bundestag-voting

./: Makefile  README.md  pyproject.toml
src/data/: download.py
tests/: test_data.py
