[project]
name = "bundestag_voting"
version = "0.1.0"
authors = [
    {name="K4th4r1n4"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # download
    "requests",
    "beautifulsoup4",
    "selenium",

    "pandas",
]

[project.optional-dependencies]
lint = [
    "black",
    "flake8",
    "isort",
    "mypy",
]
dev = [
    "ipython",
    "pyyaml",
]
test = [
    "coverage",
    "pytest",
]

[tool.black]
line-length = 79
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
py_version=310
profile = "black"

[tool.flit.external-data]
directory = "external"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"repository" = "https://github.com/K4th4r1n4/bundestag-voting"

